--- a/css/estilo.css
+++ b/css/estilo.css
@@ -88,10 +88,9 @@ div{ max-width:100%; }
 .h1 { font-family:Arial, Helvetica, sans-serif; color:#666666; font-size:60%; text-align:center; }
 .h2{ font-family:Arial, Helvetica, sans-serif; color:#08108c; font-size:150%; font-style:italic; text-align:center; }
 .link { font-family:Arial, Helvetica, sans-serif; font-size:100%; text-align:center; }
-A.link:link, A.link:visited { color:#006699; 
-}
+A.link:link, A.link:visited { color:#006699; }
+
 .content {
   padding-top: 160px; /* Pushes content below fixed header and images */
   width: 980px;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
